# LLMs_and_tictactoe

./: CLAUDE.md  README.md  main.py  pyproject.toml  scratch.ipynb
.claude/: settings.local.json
agents/: __init__.py  alphabeta_agent.py  base.py  human.py  play.py  random_agent.py
environment/: __init__.py  board.py  tictactoe_env.py
evaluation/: __init__.py  cli.py  config.py  metrics.py  plots.py  registry.py  runner.py  tournament.py
runs/ar/: games.jsonl
runs/tourney/: agent_stats.csv  config.yaml  games.jsonl  pair_stats.csv  rating_history.csv  ratings.csv
